# pi-spin

./: .gitignore  .smart_bike_conf.yaml  noxfile.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: run-checks.yaml
spin/: __main__.py  config.py  database.py  main.py  raspberrypi.py  workout.py
spin/web_app/: app.py  data_processing.py
src/pi_spin/: __main__.py  config.py  database.py  main.py  raspberrypi.py  workout.py
src/pi_spin/conf/: exercise.yaml  logging.yaml  raspberry_pi.yaml  sqlite.yaml
src/pi_spin/testing/: mock_gpio.py
src/pi_spin/web_app/: app.py  data_processing.py
tests/: test_main.py
